--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="cats_fragment_title">Cats</string>
+    <string name="login_fragment_title">Login</string>
+    <string name="commands_list_fragment_title">Commands</string>
+    <string name="graph_fragment_title">Graph</string>
 </resources>
