feat: Cats app displays log list (no log content available only list of placeholders)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">My Application</string>
     <string name="cats_fragment_title">Cats</string>
     <string name="login_fragment_title">Login</string>
-    <string name="commands_list_fragment_title">Commands</string>
+    <string name="logs_list_fragment_title">Logs</string>
     <string name="graph_fragment_title">Graph</string>
     <string name="commands_lifecycle_fragment_title">Lifecycle</string>
 </resources>
